gitops/charts/3-gateway-prom-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gateway-prom
  namespace: istio-system
  labels:
    # This label is what the ServiceMonitor will look for
    prometheus-scrape: istio-gateway
spec:
  type: ClusterIP
  ports:
    - name: metrics
      port: 15090
      targetPort: 15090
  selector:
    # These MUST match the labels on your actual ingress gateway pods
    app: istio-ingressgateway
    istio: ingressgateway
